--- a/main.css
+++ b/main.css
@@ -38,6 +38,24 @@ body {
     color: white;
 }
 
+.sample-info-list>div:nth-child(4) {
+    background-color: rgb(0, 139, 173);
+    color: white;
+}
+
+
+.sample-info-list>div:nth-child(5) {
+    background-color: rgb(0, 41, 128);
+    color: white;
+}
+
+
+.sample-info-list>div:nth-child(6) {
+    background-color: rgb(45, 0, 128);
+    color: white;
+}
+
+
 .description {
     font-size: 11px;
     padding: 12px 24px;
