--- a/main.css
+++ b/main.css
@@ -9,10 +9,12 @@ body {
 }
 
 .sample-info-list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     font-size: 12px;
     margin-bottom: 8px;
+    padding: 4px 12px;    
 }
 
 .sample-info-list>div {
@@ -22,6 +24,7 @@ body {
     border-radius: 8px;
     padding: 4px 8px;
     margin-right: 12px;
+    width: 78px;
 }
 
 .sample-info-list>div:nth-child(1) {
