--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ body {
 .sample-info-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    row-gap: 8px;
     justify-content: center;
     font-size: 12px;
     margin-bottom: 8px;
