--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 8px;
+    column-gap: 4spx;
     justify-content: center;
     font-size: 12px;
     margin-bottom: 8px;
@@ -24,8 +25,7 @@ body {
     align-items: center;
     border-radius: 8px;
     padding: 4px 8px;
-    margin-right: 12px;
-    width: 78px;
+    margin-right: 12px;    
 }
 
 .sample-info-list>div:nth-child(1) {
